k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: madeindanang-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  tls:
    - hosts:
        - openremote.wewatt.vn
      secretName: openremote-tls-secret
  rules:
    - host: openremote.wewatt.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openremote-service
                port:
                  name: http
